feat : 학교검색 위치 추가
